# fastapi_contactlist

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 122b2761d0d5_init.py  14eb87164600_init.py  7c6c9b30d72b_init.py  88f9f8856cd7_init.py
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py  notes.py  tags.py
src/routes/: contacts.py  notes.py  tags.py
